--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="729e82">  <td>23/10/30 18:51:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:organizationTests.CreateOrganizationWithIndustryAndTypeTest@183ec003]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
-<tr bgcolor="729e82">  <td>23/10/30 18:50:57</td>   <td>-3471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:organizationTests.CreateOrganizationWithIndustryAndTypeTest@183ec003]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
-<tr bgcolor="729e82">  <td>23/10/30 18:50:14</td>   <td>-46398</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:organizationTests.CreateOrganizationWithIndustryAndTypeTest@183ec003]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
-<tr bgcolor="729e82">  <td>23/10/30 18:50:34</td>   <td>-26888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:organizationTests.CreateOrganizationWithIndustryAndTypeTest@183ec003]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
-<tr bgcolor="729e82">  <td>23/10/30 18:50:14</td>   <td>-46430</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:organizationTests.CreateOrganizationWithIndustryAndTypeTest@183ec003]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@370475881</td>   <td></td> </tr>
-<tr bgcolor="6f60b4">  <td>23/10/30 18:50:38</td>   <td>-22280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganizationWithIndustryAndTypeTest.createOrgWithIndustryTest()[pri:0, instance:organizationTests.CreateOrganizationWithIndustryAndTypeTest@183ec003]">createOrgWithIndustryTest</td> 
-  <td>main@370475881</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>23/10/31 21:01:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadDataFromCmdLine.read()[pri:0, instance:practice.ReadDataFromCmdLine@117159c0]">read</td> 
+  <td>main@1863702030</td>   <td></td> </tr>
 </table>
