--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,6 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Click on create contact</td></tr>
-<tr><td>Click on create contact loog up image </td></tr>
-<tr><td>Contact created successfully</td></tr>
-<tr><td>Header Captured</td></tr>
-<tr><td>Header validation</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
