--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="729e82">  <td>23/10/31 21:01:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadDataFromCmdLine.read()[pri:0, instance:practice.ReadDataFromCmdLine@117159c0]">read</td> 
-  <td>main@1863702030</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>23/11/15 10:16:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderPractice.addProductToCart(java.lang.String,int,int,java.lang.String)[pri:0, instance:practice.DataProviderPractice@742ff096]">addProductToCart</td> 
+  <td>main@2075952726</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>23/11/15 10:16:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderPractice.addProductToCart(java.lang.String,int,int,java.lang.String)[pri:0, instance:practice.DataProviderPractice@742ff096]">addProductToCart</td> 
+  <td>main@2075952726</td>   <td></td> </tr>
+<tr bgcolor="729e82">  <td>23/11/15 10:16:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderPractice.addProductToCart(java.lang.String,int,int,java.lang.String)[pri:0, instance:practice.DataProviderPractice@742ff096]">addProductToCart</td> 
+  <td>main@2075952726</td>   <td></td> </tr>
 </table>
