--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,20 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>contactsTests.CreateContactTest</td>
+<td>contactsTests.CreateContactWithOrganizationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactTest</td>
-<td>SmokeSuite </td>
+<td>createContactWithOrgTest</td>
+<td>ReggressionSuite </td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>demo</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
