--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>SmokeSuite</td><td>CreateContactTest.createContactTest()[pri:0, instance:contactsTests.CreateContactTest@5ddeb7cb]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>ReggressionSuite</td><td>CreateContactWithOrganizationTest.createContactWithOrgTest()[pri:0, instance:contactsTests.CreateContactWithOrganizationTest@3e08ff24]<br/></td></tr>
 </table>
